fixup! [mod] [#424] reintroduce fixed `jetty9-ring-adapter` support